feat: implement medical curriculum modules, healthcare domain pages, and Android app integration